--- a/.env
+++ b/.env
@@ -23,8 +23,8 @@ APP_SECRET=a785f57322e17fd0963f3f15997f5599
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://user_poo:userPoo@127.0.0.1:3308/fil_rouge?charset=utf8mb4"
-#DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
+# DATABASE_URL="mysql://user_poo:userPoo@127.0.0.1:3308/fil_rouge?charset=utf8mb4"
+DATABASE_URL="postgresql://mor:passer@127.0.0.1:5432/app_test?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> lexik/jwt-authentication-bundle ###
