--- a/composer.json
+++ b/composer.json
@@ -74,13 +74,17 @@
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+            "assets:install %PUBLIC_DIR%": "symfony-cmd",
+            "requirements-checker": "script"
         },
         "post-install-cmd": [
             "@auto-scripts"
         ],
         "post-update-cmd": [
             "@auto-scripts"
+        ],
+        "compile":[
+            "@php bin/console lexik:jwt:generate-keypair --overwrite --quiet --env prod"
         ]
     },
     "conflict": {
